# CanvasFileSync

./: .gitignore  Cargo.toml  README.md  TODO.txt
src/: lib.rs  main.rs  util.rs
src/api/: canvas.schema.graphql  canvas.schema.json  core.rs  course.rs  data.rs  diff.rs  diff_merge.rs  download.rs  downloads.rs  link.rs  mod.rs  module.rs  query.graphql  query.rs
src/cli/: mod.rs  select.rs
src/download/: data.rs  diff_merge.rs  download.rs  downloads.rs  mod.rs
