[package]
name = "canvas-file-sync"
version = "0.1.0"
authors = ["Khyber Sen <kkysen@gmail.com>"]
edition = "2018"
description = "Sync Canvas files to your computer."
license = "MIT"
repository = "https://github.com/kkysen/CanvasFileSync"
homepage = "https://github.com/kkysen/CanvasFileSync/blob/master/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = {version = "0.3.14", features = ["paw"]}
paw = "1.0.0"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
async-std = "1.5.0"
surf = "2.0.0-alpha.1"
itertools = "0.9.0"
futures = "0.3.4"
graphql_client = "0.9.0"
chrono = { version = "0.4.11", features = ["serde"] }
ignore = "0.4.14"
optional = { version = "0.5.0", features = ["serde"] }
filetime = "0.2.9"
halfbrown = "0.1.11"
http-types = "1.2.0"
walkdir = "2.3.1"
#skim = "0.8.1"
dirs = "2.0.2"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
